--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,60 +1,145 @@
-*{
-    box-sizing: border-box;
+@font-face {
+  font-family: iranyekan;
+  font-weight: 200;
+  src: url(../fonts/IRANYekanWebRegular.ttf);
 }
 
-body{
-    margin: 0;
+@font-face {
+  font-family: iranyekan;
+  font-weight: 400;
+  src: url(../fonts/IRANYekanWebMedium.ttf);
 }
 
-ul{
-    list-style: none;
-    margin: 0;
-    padding: 0;
+@font-face {
+  font-family: iranyekan;
+  font-weight: 600;
+  src: url(../fonts/IRANYekanWebExtraBlack.ttf);
 }
 
-a{
-    text-decoration: none;
+* {
+  box-sizing: border-box;
+  color: #333;
+  font-family: iranyekan;
+  font-weight: 200;
 }
 
-.header{
-    width: 100%;
-    height: 65px;
-    background-color: #fff;
-    box-shadow: 0px 1px 2px #bbb;
+body {
+  margin: 0;
 }
 
-.container{
-    width: 100%;
-    padding: 0 60px;
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
-.header_logo{
-    float: right;
-    padding-top: 6px;
+a {
+  text-decoration: none;
 }
 
-.header_logo img{
-    width: 50px;
-    height: auto;
+.container {
+  width: 100%;
+  padding: 0 60px;
 }
 
-.header_nav{
-    float: right;
-    margin-right: 30px;
+.clearfix {
+  clear: both;
 }
 
-.header_nav li{
-    display: inline-block;
-    padding: 24px 10px;
-    float: right;
+/*  Start Header Styles */
+
+.header {
+  width: 100%;
+  height: 65px;
+  background-color: #fff;
+  box-shadow: 0px 1px 2px #bbb;
 }
 
-.btn_login{
-    background-color: #0080FF;
-    color: #FFF;
-    border: none;
-    padding: 9px 11px;
-    margin: 16px 0;
-    border-radius: 3px;
-    cursor: pointer;
+.header_logo {
+  float: right;
+  padding-top: 6px;
+}
+
+.header_logo img {
+  width: 50px;
+  height: auto;
+}
+
+.header_nav {
+  float: right;
+  margin-right: 30px;
+}
+
+.header_nav li {
+  display: inline-block;
+  padding: 23px 10px;
+  float: right;
+}
+
+.btn_login {
+  background-color: #0080ff;
+  color: #fff;
+  border: none;
+  padding: 9px 11px;
+  margin: 16px 0;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+/*  End Header Styles */
+
+/*  Start page_intro */
+
+.page_intro {
+  width: 100%;
+  height: auto;
+  background: rgb(0, 129, 181);
+  background: linear-gradient(
+    90deg,
+    rgb(78, 204, 253) 0%,
+    rgba(0, 96, 252, 1) 100%
+  );
+  padding: 50px 0;
+}
+
+.page_intro_right {
+  width: 50%;
+  height: auto;
+  float: right;
+  text-align: right;
+}
+
+.page_intro_right h1 {
+  color: #fff;
+  font-size: 70px;
+  font-weight: 600;
+}
+
+.page_intro_right_btns {
+  margin: 0 auto;
+  width: 350px;
+}
+
+.page_intro_right_btn {
+  color: #fff;
+  background-color: transparent;
+  border: 2px solid #fff;
+  width: 160px;
+  font-size: 20px;
+  padding: 10px;
+  border-radius: 5px;
+  float: right;
+  margin-left: 8px;
+}
+
+.page_intro_left {
+  width: 50%;
+  height: auto;
+  float: right;
+}
+
+.page_intro_left img {
+  width: 100%;
+  height: auto;
+  /* max-height: 400px; */
 }
