--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
 @font-face {
   font-family: iranyekan;
   font-weight: 400;
-  src: url(../fonts/IRANYekanWebMedium.ttf);
+  src: url(../fonts/IRANYekanWebExtraBold.ttf);
 }
 
 @font-face {
@@ -25,6 +25,7 @@
 
 body {
   margin: 0;
+  direction: rtl;
 }
 
 ul {
@@ -46,6 +47,10 @@ a {
   clear: both;
 }
 
+.p_15 {
+  padding-right: 15px;
+  padding-left: 15px;
+}
 /*  Start Header Styles */
 
 .header {
@@ -84,9 +89,8 @@ a {
   margin: 16px 0;
   border-radius: 3px;
   cursor: pointer;
+  float: left;
 }
-
-/*  End Header Styles */
 
 /*  Start page_intro */
 
@@ -142,4 +146,24 @@ a {
   width: 100%;
   height: auto;
   /* max-height: 400px; */
+}
+
+/* New Posts */
+
+.new_product {
+  width: 25%;
+  height: auto;
+  float: right;
+  padding: 15px;
+}
+
+.new_products h2 {
+  font-weight: 400;
+  margin: 20px ;
+}
+
+.new_product_card {
+  background-color: lightcoral;
+  width: 100%;
+  height: 300px;
 }
