--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -159,11 +159,50 @@ a {
 
 .new_products h2 {
   font-weight: 400;
-  margin: 20px ;
+  margin: 20px;
 }
 
 .new_product_card {
-  background-color: lightcoral;
   width: 100%;
-  height: 300px;
+  height: 335px;
+  box-shadow: 0px 2px 3px #bbb;
 }
+
+.new_product_img {
+  width: 100%;
+  height: 250px;
+}
+
+.new_product_img img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.new_product_body {
+  padding: 10px;
+}
+
+.new_product_title {
+  margin: 0;
+  float: right;
+  font-weight: 400;
+}
+
+.new_product_price {
+  margin: 0;
+  float: left;
+  color: #777;
+  text-decoration: line-through;
+}
+
+.new_product_description{
+  margin: 0;
+  float: right;
+}
+
+.new_product_price_off{
+  margin: 0;
+  float: left;
+}
+
