--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -165,7 +165,7 @@ a {
 .new_product_card {
   width: 100%;
   height: 335px;
-  box-shadow: 0px 2px 3px #bbb;
+  box-shadow: 0px 1px 3px #bbb;
 }
 
 .new_product_img {
@@ -196,13 +196,52 @@ a {
   text-decoration: line-through;
 }
 
-.new_product_description{
+.new_product_description {
   margin: 0;
   float: right;
+  text-overflow: ellipsis;
+    width: 50%;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
-.new_product_price_off{
+.new_product_price_off {
   margin: 0;
   float: left;
 }
 
+@media screen and (max-width: 1200px) {
+  .new_product {
+    width: 50%;
+  }
+  .container{
+    padding: 0 200px;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .new_product {
+    width: 50%;
+  }
+  .container{
+    padding: 0 60px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .new_product {
+    width: 100%;
+  }
+  .container{
+    padding: 0 100px;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .new_product {
+    width: 100%;
+  }
+  .container{
+    padding: 0;
+  }
+}
