--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,7 @@
 body {
   margin: 0;
   direction: rtl;
+  padding-bottom: 40px;
 }
 
 ul {
@@ -200,9 +201,9 @@ a {
   margin: 0;
   float: right;
   text-overflow: ellipsis;
-    width: 50%;
-    white-space: nowrap;
-    overflow: hidden;
+  width: 50%;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .new_product_price_off {
@@ -210,20 +211,74 @@ a {
   float: left;
 }
 
+/*  Main AD */
+.main_ad {
+  padding-top: 20px;
+}
+
+.main_ad_right {
+  width: 75%;
+  height: 400px;
+  float: right;
+  padding: 15px;
+}
+
+.main_ad_right img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 3px;
+}
+
+.main_ad_left {
+  width: 25%;
+  height: 400px;
+  float: left;
+  padding: 15px;
+}
+
+.main_ad_left img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 3px;
+}
+
+/*  Most Sales */
+.most_sales h2 {
+  margin: 20px;
+  font-weight: 400;
+}
+
+.most_sales_item {
+  float: right;
+  width: calc(100% / 3);
+  height: 350px;
+  padding: 15px;
+}
+
+/*  Responsive */
 @media screen and (max-width: 1200px) {
   .new_product {
     width: 50%;
   }
-  .container{
+  .container {
     padding: 0 200px;
+  }
+
+  .main_ad_left {
+    display: none;
+  }
+  .main_ad_right {
+    width: 100%;
+  }
+  .most_sales_item {
+    width: 50%;
   }
 }
 
 @media screen and (max-width: 992px) {
-  .new_product {
-    width: 50%;
-  }
-  .container{
+  .container {
     padding: 0 60px;
   }
 }
@@ -232,8 +287,18 @@ a {
   .new_product {
     width: 100%;
   }
-  .container{
+  .container {
     padding: 0 100px;
+  }
+  .main_ad_left {
+    display: block;
+    width: 100%;
+  }
+  .main_ad_right {
+    display: none;
+  }
+  .most_sales_item {
+    width: 100%;
   }
 }
 
@@ -241,7 +306,7 @@ a {
   .new_product {
     width: 100%;
   }
-  .container{
+  .container {
     padding: 0;
   }
 }
