--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,8 @@
   color: #333;
   font-family: iranyekan;
   font-weight: 200;
+  margin: 0;
+  padding: 0;
 }
 
 body {
@@ -59,6 +61,17 @@ a {
   height: 65px;
   background-color: #fff;
   box-shadow: 0px 1px 2px #bbb;
+}
+
+.hamber_menu {
+  background-color: transparent;
+  border: none;
+  display: none;
+  margin: 9px 0;
+}
+
+.hamber_menu img {
+  width: 40px;
 }
 
 .header_logo {
@@ -167,6 +180,7 @@ a {
   width: 100%;
   height: 335px;
   box-shadow: 0px 1px 3px #bbb;
+  background-color: #fff;
 }
 
 .new_product_img {
@@ -245,8 +259,13 @@ a {
 }
 
 /*  Most Sales */
+.most_sales{
+background-color: #D9F1FF;
+padding: 16px 0;
+}
+
 .most_sales h2 {
-  margin: 20px;
+  margin-bottom: 20px;
   font-weight: 400;
 }
 
@@ -299,6 +318,18 @@ a {
   }
   .most_sales_item {
     width: 100%;
+  }
+
+  .header nav {
+    display: none;
+  }
+
+  .header_logo {
+    display: none;
+  }
+
+  .hamber_menu {
+    display: inline-block;
   }
 }
 
